css: Fixed horizontal scrollbar issue on small screens

--- a/skylines/public/css/bootstrap-theme-skylines.css
+++ b/skylines/public/css/bootstrap-theme-skylines.css
@@ -105,9 +105,9 @@ body {
 .content {
   min-height: 500px;
   background-color: #fff;
-  padding: 20px;
+  padding: 15px;
   /* negative indent the amount of the padding to maintain the grid system */
-  margin: 0 -20px;
+  margin: 0 -15px;
   -webkit-border-radius: 0 0 6px 6px;
      -moz-border-radius: 0 0 6px 6px;
           border-radius: 0 0 6px 6px;
